--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -8,7 +8,8 @@
       </script>
     {% endcomment %}
 
-    <!-- Google Tag Manager --> 
+    <!-- Google Tag Manager -->       
+
     <script async="async">
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -222,6 +223,8 @@
         {% section 'footer' %}
       </div>
     </div>
+    
+    <p>test setup</p>
 
     <script>
       document.addEventListener('DOMContentLoaded', function () {
