--- a/sections/basic.liquid
+++ b/sections/basic.liquid
@@ -1,18 +1,9 @@
-<div class="custom-page-wrapper sw-py-10 sw-px-4 xl:sw-px-0">
-  <div class="sw-max-w-[1110px] sw-mx-auto">
-    {{ content_for_layout }}
-  </div>
-</div>
-
-{%  schema  %}
-    {  
-        "name":"Basic section",
-        "settings":[],
-        "presets": [
-            {
-                "name": "Basic section"
-            }
+<p>Welcome</p>
+{% schema %}
+{
+    "name": "basic",
+    "settings": [
+        
         ]
-    }
-
+}
 {% endschema %}
