--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -29,17 +29,10 @@
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ 'accessibility.skip_to_text' | t }}
     </a>
-
-    {% section 'main-password-header' %}
-
     <main id="MainContent" class="password-main">
       {{ content_for_layout }}
+      {% sections 'password' %}
     </main>
-    <footer>
-      {% section 'main-password-footer' %}
-    </footer>
-    <ul hidden>
-      <li id="a11y-new-window-message">{{ 'accessibility.link_messages.new_window' | t }}</li>
-    </ul>
+  
   </body>
 </html>
