--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -20,8 +20,9 @@
     <meta name="description" content="{{ page_description | escape }}">
 
     {% render 'meta-tags' %}
-
     {{ content_for_header }}
+    {% render 'vite-tag' with 'base.css' %}
+
 
   </head>
 
@@ -33,6 +34,7 @@
       {{ content_for_layout }}
       {% sections 'password' %}
     </main>
+
   
   </body>
 </html>
