--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -15,6 +15,8 @@
     <link rel="dns-prefetch" href="https://maps.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       {% render 'vite-tag' with 'base.css' %}
+    {% render 'vite-tag' with 'keen-slider.js' %}
      {{content_for_header}}
   </head>
 
@@ -41,6 +43,7 @@
           {% endif %}
 
           {{ content_for_layout }}
+          <p class="sw-bg-black sw-text-white">djcdjbjdd</p>
         </main>
       </div>
     </div>
