--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -38,7 +38,7 @@
     </a>
     <main id="MainContent" class="password-main">
       {{ content_for_layout }}
-      {% sections 'password' %}
+      {% sections 'password-content' %}
     </main>
 
   
