header 1st fold

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -36,6 +36,8 @@
     {% endif %}
   >
     <div id="PageContainer" class="page-container">
+      {% section 'announcement-bar-v2' %}
+      {% section 'header-v2' %}
       <div class="transition-body">
         <main class="main-content sw-min-h-screen sw-relative" id="MainContent">
           {% if settings['show-overlay'] %}
