--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -47,6 +47,7 @@
           {% endif %}
           {{ content_for_layout }}
         </main>
+        <h1>This is for testing puprpose</h1>
       </div>
     </div>
   </body>
