--- a/frontend/entrypoints/base.css
+++ b/frontend/entrypoints/base.css
@@ -2,3 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+@layer base {
+  body {
+      -webkit-user-select: text;
+    user-select: text;
+    @apply sw-font-body sw-text-sw-text;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    @apply sw-font-heading;
+  }
+}
+
