--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
        {% render 'vite-tag' with 'base.css' %}
+    {{ 'fonts.css' | asset_url | stylesheet_tag }}
     
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
 
@@ -47,7 +48,6 @@
           {% endif %}
           {{ content_for_layout }}
         </main>
-        <h1>This is for testing puprpose</h1>
       </div>
     </div>
   </body>
