--- a/snippets/mobile-nav-v2.liquid
+++ b/snippets/mobile-nav-v2.liquid
@@ -8,12 +8,12 @@
     }
 {% endstyle %}
 <div data-role="header-overlay" class="sw-fixed sw-top-0 sw-left-0 sw-w-full sw-h-full sw-bg-[rgba(0,0,0,0.4)] sw-z-999 sw-backdrop-blur-sm sw-hidden [&.active]:sw-block sw-z-[999]"></div>
-<div class="sw-fixed sw-left-0 lg:sw-hidden sw-top-0 sw-h-full sw-w-[calc(100%_-_20px)] md:sw-max-w-[400px] sw-bg-[#030303] sw-hidden [&.active]:sw-block before:sw-content-[''] before:sw-w-full before:sw-opacity-0 before:sw-transition-all [&.updating]:before:sw-opacity-100 before:sw-pointer-events-none before:sw-h-full before:sw-bg-[#030303] before:sw-absolute before:sw-left-0 before:sw-top-0 before:sw-duration-[400ms] sw-z-[1000]" data-role="mobile-nav">
+<div class="sw-fixed sw-left-0 lg:sw-hidden sw-top-0 sw-h-full sw-w-[calc(100%_-_20px)] md:sw-max-w-[400px] sw-bg-[#ffffff] sw-hidden [&.active]:sw-block before:sw-content-[''] before:sw-w-full before:sw-opacity-0 before:sw-transition-all [&.updating]:before:sw-opacity-100 before:sw-pointer-events-none before:sw-h-full before:sw-bg-[#ffffff] before:sw-absolute before:sw-left-0 before:sw-top-0 before:sw-duration-[400ms] sw-z-[1000]" data-role="mobile-nav">
     <div class="sw-py-5 sw-px-5">
         <div class="sw-flex sw-justify-between sw-items-center">
             <h1 class="sw-mb-0">
                 <a href="{{ shop.url }}" class="sw-text-[24px]">
-                    {% liquid
+                     {% liquid
                       assign logo_type = section.settings.logo_type
                       if logo_type == 'svg'
                         assign logo = section.settings.logo_svg
@@ -32,7 +32,7 @@
                     {% endif %}
                 </a>
             </h1>
-            <button data-role="nav-hide">{% render 'icons-v2', icon:'icon-cross',class:"sw-fill-[#fff] sw-w-[14px] sw-h-[14px]" %}</button>
+            <button data-role="nav-hide">{% render 'icons-v2', icon:'icon-cross',class:"sw-fill-[#724430] sw-w-[14px] sw-h-[14px]" %}</button>
         </div>
         <div class="sw-mt-6 sw-max-h-[calc(100vh_-_80px)] sw-overflow-y-auto">
             <div class="">
@@ -48,7 +48,7 @@
                                             {% assign color = block.settings.text_color %}
                                         {% endif %}
                                     {% endfor %}
-                                    <a href="{{ link.url }}" {% if style %}style="color:{{ color }}!important;"{% endif %} class="!sw-text-[#fff] sw-font-medium sw-text-[14px]">{{ link.title }}</a>
+                                    <a href="{{ link.url }}" {% if style %}style="color:{{ color }}!important;"{% endif %} class="!sw-text-[#724430] sw-font-medium sw-text-[14px]">{{ link.title }}</a>
                                     <button data-role="trigger">{% render 'icons-v2', icon: 'icon-caret-down', class:'sw-w-4 sw-h-4 sw-text-[#fff] group-[&.active]:sw-rotate-[180deg] sw-trasition-all sw-duration-[400ms]' %}</button>
                                 </div>
                                 <div data-role="content" class="sw-max-h-[0px] sw-overflow-hidden">
@@ -57,7 +57,7 @@
                                             {% if child_link.levels > 0 %}
                                                 <toggle-expand>
                                                     <div data-role="header" class="sw-flex sw-justify-between sw-pt-4">
-                                                        <a href="{{ child_link.url }}" class="!sw-text-[#fff] sw-font-medium sw-text-[14px]">{{ child_link.title }}</a>
+                                                        <a href="{{ child_link.url }}" class="!sw-text-[#724430] sw-font-medium sw-text-[14px]">{{ child_link.title }}</a>
                                                         <button class="" data-role="trigger">{% render 'icons-v2', icon: 'icon-caret-down', class:'sw-w-4 sw-h-4 sw-text-[#fff]  group-[&.active]:sw-rotate-[180deg] sw-trasition-all sw-duration-[400ms]' %}</button>
                                                     </div>
                                                     <div data-role="content" class="sw-max-h-[0px] sw-overflow-hidden">
@@ -84,7 +84,7 @@
                                 {% assign color = block.settings.text_color %}
                             {% endif %}
                         {% endfor %}
-                        <a href="{{ link.url }}" {% if style %}style="color:{{ color }}!important;"{% endif %} class="!sw-text-[#fff] sw-font-medium sw-text-[14px]">{{ link.title }}</a>
+                        <a href="{{ link.url }}" {% if style %}style="color:{{ color }}!important;"{% endif %} class="!sw-text-[#724430] sw-font-medium sw-text-[14px]">{{ link.title }}</a>
                     {% endif %}
                     </div>
                 {% endfor %}
