--- a/snippets/mega-menu-v2.liquid
+++ b/snippets/mega-menu-v2.liquid
@@ -4,7 +4,7 @@
 <div data-role="mega-menu" class="sw-w-full">
     <div class="sw-hidden lg:sw-block">
         <div class="">
-          <div class="sw-flex sw-gap-[14px] lg:sw-gap-6 sw-gap-y-10 sw-flex-wrap sw-justify-center">
+          <div class="sw-flex sw-gap-[14px] lg:sw-gap-[50px]  sw-flex-wrap sw-justify-center">
             {% for link in desktop_nav.links %}
               <div data-role="parent-nav">
                 {% liquid
