--- a/snippets/mobile-nav-v2.liquid
+++ b/snippets/mobile-nav-v2.liquid
@@ -32,7 +32,8 @@
                     {% endif %}
                 </a>
             </h1>
-            <button data-role="nav-hide">{% render 'icons-v2', icon:'icon-cross',class:"sw-fill-[#724430] sw-w-[14px] sw-h-[14px]" %}</button>
+            <button data-role="nav-hide" class="sw-grid sw-place-items-center sw-h-7 sw-w-7 sw-rounded-full sw-bg-[#FFF6FA] sw-border sw-border-black/5 sw-transition group-hover:sw-bg-white">
+                {% render 'icons-v2', icon:'icon-cross',class:"sw-fill-[#724430] sw-w-[14px] sw-h-[14px]" %}</button>
         </div>
         <div class="sw-mt-6 sw-max-h-[calc(100vh_-_80px)] sw-overflow-y-auto">
             <div class="">
