--- a/sections/header-v2.liquid
+++ b/sections/header-v2.liquid
@@ -178,7 +178,6 @@
     >
       <button data-role="nav-display" class="lg:sw-hidden">{% render 'icons-v2', icon: 'icon-hamburger' %}</button>
       <div class="" data-role="header-icon">
-        <h1 class="sw-mb-0">
           <a href="{{ shop.url }}" class="sw-text-[24px] sw-flex sw-items-center sw-justify-center">
             {% liquid
               assign logo_type = section.settings.logo_type
@@ -192,13 +191,13 @@
               {% if logo_type == 'svg' %}
                 <span class="sw-flex sw-items-center sw-w-[200px] lg:sw-w-[220px]">{{ logo }}</span>
               {% else %}
-                <span class="sw-inline-block">{{ logo | image_url: width: 200, height: 200 | image_tag }}</span>
-              {% endif %}
+              <span class="sw-inline-block">
+                  {{ logo | image_url: width: 240 | image_tag: loading: 'lazy', alt: shop.name }}
+                </span>              {% endif %}
             {% else %}
               {{ shop.name }}
             {% endif %}
           </a>
-        </h1>
       </div>
 
       {% render 'mega-menu-v2', section: section %}
